- Fixed UI scale breaking screen text