@@ -1,1 +1,4 @@
-- Fixed UI scale breaking screen text
+- Fixed Apotheosis sometimes spawning in the Lihahzrd Temple
+- Minor cleanup
+- Nerfed the Lush Fishing Rod's fishing power slightly (26 -> 25), increases by 5 when in the Verdant
+- Fixed Magic-Infused Wisplant using the wrong star to be crafted
